x.y.z
=====

New features:

Bug fixes:

Other:

2.8.0
=====

Release date:

Mon, 25 Oct 2021 21:11:27 +0300

New features:

* Fix GitHub Issue #173: Being able to paste and create a node right-away
  - Pasting text to Heimer will create a new node with that text
  - Pasting image data e.g. from Gimp to Heimer will create a new node with that image

* Highlight text found by search
  - Not perfect as only the first occurrence is being matched

Bug fixes:

* Fix GitHub Issue #175: Windows installer doesn't add shortcuts

* Fix image save when original image is missing

* Write images with same id only once

Other:

* Unselect text on all nodes when background is clicked

2.7.0
=====

New features:

* Add Chinese translation

* Add Spanish translation

* Fix GitHub Issue #129: Add search field

Bug fixes:

* Fix editor scene getting broken when a file cannot be opened

Other:

* Limit application window startup size

2.6.0
=====

New features:

* Add support for .ALZ drag'n'drop

Other:

* Build Windows build with CMake

2.5.0
=====

New features:

* Middle-button support for selection rects

* Fix GitHub Issue #151: Default custom colors
  - Harmonizes color picker dialog between platforms

Other:

* Fix GitHub Issue #154: Do not deselect nodes on screen click
  - A modifier key (Shift, Ctrl) is now required to clear the selected group

2.4.0
=====

New features:

* Fix GitHub Issue #78: Add optional autosave
  - Autosave can be enabled in the settings menu

Bug fixes:

* Fix GitHub Issue #150: Ghost handles crash
* Fix GitHub Issue #148: Instant node creation not aligned with the grid

Other:

* Refactor dialogs to use more standard components
* Move settings menu action to file menu and remove settings menu

2.3.0
=====

New features:

* Fix GitHub Issue #140: Double-click to create a new node
* Add setting to select node group by intersection

Bug fixes:

* Fix GitHub Issue #143: Inexact node selection
  - Make connecting nodes by dragging easier